// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionsTimeline renders all when ExpandListToggle is toggled by default 1`] = `
<Fragment>
  <Timeline
    mode=""
    reverse={false}
  >
    <TimelineItem
      color="blue"
      key="#undefined@Inst 1"
      pending={false}
      position=""
    >
      <div />
      <div>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 1",
            }
          }
        />
      </div>
    </TimelineItem>
    <TimelineItem
      color="blue"
      key="#undefined@Inst 2"
      pending={false}
      position=""
    >
      <div />
      <div>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 2",
            }
          }
        />
      </div>
    </TimelineItem>
    <TimelineItem
      color="blue"
      key="#undefined@Inst 3"
      pending={false}
      position=""
    >
      <div />
      <div>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 3",
            }
          }
        />
      </div>
    </TimelineItem>
    <TimelineItem
      color="blue"
      key="#undefined@Inst 4"
      pending={false}
      position=""
    >
      <div />
      <div>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 4",
            }
          }
        />
      </div>
    </TimelineItem>
    <TimelineItem
      color="blue"
      key="#undefined@Inst 5"
      pending={false}
      position=""
    >
      <div />
      <div>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 5",
            }
          }
        />
      </div>
    </TimelineItem>
    <TimelineItem
      color="blue"
      key="#undefined@Inst 6"
      pending={false}
      position=""
    >
      <div />
      <div>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 6",
            }
          }
        />
      </div>
    </TimelineItem>
  </Timeline>
  <ExpandListToggle
    expandLabel="Show all positions"
    expanded={true}
    limit={3}
    onToggle={[Function]}
    size={6}
  />
</Fragment>
`;

exports[`PositionsTimeline renders only first 3 by default 1`] = `
<Fragment>
  <Timeline
    mode=""
    reverse={false}
  >
    <TimelineItem
      color="blue"
      key="#undefined@Inst 1"
      pending={false}
      position=""
    >
      <div />
      <div>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 1",
            }
          }
        />
      </div>
    </TimelineItem>
    <TimelineItem
      color="blue"
      key="#undefined@Inst 2"
      pending={false}
      position=""
    >
      <div />
      <div>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 2",
            }
          }
        />
      </div>
    </TimelineItem>
    <TimelineItem
      color="blue"
      key="#undefined@Inst 3"
      pending={false}
      position=""
    >
      <div />
      <div>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 3",
            }
          }
        />
      </div>
    </TimelineItem>
  </Timeline>
  <ExpandListToggle
    expandLabel="Show all positions"
    expanded={false}
    limit={3}
    onToggle={[Function]}
    size={6}
  />
</Fragment>
`;

exports[`PositionsTimeline renders with positions 1`] = `
<Fragment>
  <Timeline
    mode=""
    reverse={false}
  >
    <TimelineItem
      color="blue"
      key="#1990-1994@Inst 1"
      pending={false}
      position=""
    >
      <div>
        1990-1994
      </div>
      <div>
        <strong>
          UNDERGRADUATE
          , 
        </strong>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 1",
              "display_date": "1990-1994",
              "rank": "UNDERGRADUATE",
            }
          }
        />
      </div>
    </TimelineItem>
    <TimelineItem
      color="blue"
      key="#1994-2000@Inst 2"
      pending={false}
      position=""
    >
      <div>
        1994-2000
      </div>
      <div>
        <strong>
          PHD
          , 
        </strong>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 2",
              "display_date": "1994-2000",
              "rank": "PHD",
            }
          }
        />
      </div>
    </TimelineItem>
    <TimelineItem
      color="blue"
      key="#2000-present@CERN"
      pending={false}
      position=""
    >
      <div>
        2000-present
      </div>
      <div>
        <strong>
          STAFF
          , 
        </strong>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "CERN",
              "display_date": "2000-present",
              "rank": "STAFF",
              "current": true,
            }
          }
        />
      </div>
    </TimelineItem>
  </Timeline>
  <ExpandListToggle
    expandLabel="Show all positions"
    expanded={false}
    limit={3}
    onToggle={[Function]}
    size={3}
  />
</Fragment>
`;

exports[`PositionsTimeline renders with single position 1`] = `
<Fragment>
  <Timeline
    mode=""
    reverse={false}
  >
    <TimelineItem
      color="blue"
      key="#present@Inst 1"
      pending={false}
      position=""
    >
      <div>
        present
      </div>
      <div>
        <strong>
          UNDERGRADUATE
          , 
        </strong>
        <AuthorAffiliation
          affiliation={
            Immutable.Map {
              "institution": "Inst 1",
              "rank": "UNDERGRADUATE",
              "display_date": "present",
              "current": true,
            }
          }
        />
      </div>
    </TimelineItem>
  </Timeline>
  <ExpandListToggle
    expandLabel="Show all positions"
    expanded={false}
    limit={3}
    onToggle={[Function]}
    size={1}
  />
</Fragment>
`;
